fux targets: test, clean

--- a/07_Environmental/Makefile.am
+++ b/07_Environmental/Makefile.am
@@ -1,4 +1,4 @@
-GENERATES = aclocal.m4 aclocal.m4 compile config.h.in config.log configure install-sh missing autom4te.cache config.h config.h.in~ config.status configure~ depcomp Makefile Makefile.in rhasher stamp-h1 src/rhasher.o test*
+GENERATES = aclocal.m4 aclocal.m4 compile config.h.in config.log configure install-sh missing autom4te.cache config.h config.h.in~ config.status configure~ depcomp Makefile Makefile.in rhasher stamp-h1 src/rhasher.o src/.deps src/.dirstamp test*
 
 bin_PROGRAMS=rhasher
 
@@ -10,13 +10,13 @@ test.sh:
 	echo 'echo "some text for test" > test_file' >> $@
 
 	echo 'sha1sum test_file |  cut -d " " -f 1 > test_true_ans' >> $@
-	echo 'echo "SHA1 test_file" | ./rhasher | sed -n '2p' > test_ans' >> $@
+	echo 'echo "SHA1 test_file" | ./rhasher | tail -n 2 | head -n 1 > test_ans' >> $@
 	echo 'cmp test_true_ans test_ans' >> $@
 
 	echo 'md5sum test_file |  cut -d " " -f 1 > test_true_ans' >> $@
-	echo 'echo "MD5 test_file" | ./rhasher | sed -n '2p' > test_ans' >> $@
+	echo 'echo "MD5 test_file" | ./rhasher | tail -n 2 | head -n 1 > test_ans' >> $@
 	echo 'cmp test_true_ans test_ans' >> $@
-    
+
 	chmod +x $@
 
 clean:
